--- a/history.html
+++ b/history.html
@@ -191,9 +191,8 @@
     <main>
         <section class="container mx-auto">
             <h2 class="text-3xl font-bold text-center mb-8">History</h2>
-            <p class="text-lg mb-4">Philo Academy was founded in 2026 by a group of educators and scholars passionate about classical education. Inspired by the great books tradition, they sought to create a school in the Twin Cities that would cultivate virtue, wisdom, and intellectual rigor in its students.</p>
-            <p class="text-lg mb-4">Since its inception, Philo Academy has grown from a small cohort of 50 students to a thriving community of over 300, offering programs for grades K-12. Key milestones include the introduction of traditional Western martial training in 2028, the establishment of the Great Books Symposium in 2029, and the expansion of our campus in 2031 to accommodate growing demand.</p>
-            <p class="text-lg">Today, Philo Academy stands as a beacon of classical education, dedicated to forming virtuous scholars who pursue truth, goodness, and beauty in all aspects of life.</p>
+            <p class="text-lg mb-4">Philo Academy was founded in 2025 by a group of educators and community members who are passionate about classical educationm. </p>
+            <p class="text-lg">Today, Philo Academy hopes to become a beacon of classical education, dedicated to forming virtuous scholars who pursue truth, goodness, and beauty in all aspects of life.</p>
         </section>
     </main>
 
