--- a/10-12-program.html
+++ b/10-12-program.html
@@ -349,7 +349,7 @@
                         <i class="fas fa-book mb-2"></i>
                         <h3>Literature</h3>
                     </a>
-                    <a hacksref="history10-12.html" class="subject-bubble flex flex-col items-center p-6 rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300">
+                    <a href="history10-12.html" class="subject-bubble flex flex-col items-center p-6 rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300">
                         <i class="fas fa-landmark mb-2"></i>
                         <h3>History</h3>
                     </a>
