--- a/6-9-program.html
+++ b/6-9-program.html
@@ -24,6 +24,7 @@
             color: var(--text-color);
             background-color: var(--background-color);
             line-height: 1.6;
+            font-size: 1rem;
         }
         h1, h2, h3 {
             font-family: 'Cinzel', serif;
@@ -35,7 +36,7 @@
         .banner {
             background-color: var(--primary-color);
             color: var(--accent-color);
-            padding: 1.5rem 0;
+            padding: 1rem 0;
             position: relative;
         }
         .sub-banner {
@@ -55,7 +56,7 @@
         .motto {
             font-family: 'Cinzel', serif;
             font-style: italic;
-            font-size: 0.875rem;
+            font-size: 0.75rem;
             font-weight: 400;
             color: var(--tertiary-color);
         }
@@ -95,10 +96,10 @@
             text-align: center;
         }
         .logo {
-            width: 60px;
+            width: 48px;
             height: auto;
-            margin-right: 1rem;
-            margin-bottom: 0.5rem;
+            margin-right: 0.5rem;
+            margin-bottom: 0.25rem;
             object-fit: contain;
             transition: transform 0.3s ease;
         }
@@ -109,9 +110,9 @@
             display: inline-block;
         }
         .banner .text-container h1 {
-            font-family: 'Cinzel', 'Times New Roman', serif !important;
+            font-family: 'Cinzel', 'Times New Roman', serif;
             font-weight: 700;
-            font-size: 1.75rem;
+            font-size: 1.5rem;
         }
         .nav-link {
             font-family: 'Cinzel', serif;
@@ -128,24 +129,25 @@
             background-color: var(--tertiary-color);
             border: 1px solid var(--accent-color);
             border-radius: 4px;
-            padding: 0.25rem 0.5rem;
-            width: 80px;
+            padding: 0.5rem;
+            width: 100%;
+            max-width: 200px;
             font-family: 'Roboto', sans-serif;
-            font-size: 0.75rem;
+            font-size: 0.875rem;
             transition: border-color 0.3s ease, width 0.3s ease;
         }
         .search-bar:focus {
             outline: none;
             border-color: var(--primary-color);
-            width: 120px;
+            width: 100%;
         }
         .search-button {
             background-color: var(--accent-color);
             color: var(--primary-color);
-            padding: 0.25rem 0.5rem;
+            padding: 0.5rem 1rem;
             border-radius: 4px;
             font-family: 'Cinzel', serif;
-            font-size: 0.75rem;
+            font-size: 0.875rem;
             font-weight: 700;
             transition: background-color 0.3s ease, color 0.3s ease;
         }
@@ -155,14 +157,14 @@
             color: var(--primary-color);
         }
         section {
-            padding: 2rem 0;
+            padding: 1.5rem 0;
         }
         .container {
             max-width: 1200px;
         }
         @media (min-width: 768px) {
             .banner {
-                padding: 2rem 0;
+                padding: 1.5rem 0;
             }
             .banner .container {
                 flex-direction: row;
@@ -170,15 +172,15 @@
                 justify-content: space-between;
             }
             .logo {
-                width: 104px;
+                width: 80px;
                 margin-right: 1rem;
                 margin-bottom: 0;
             }
             .banner .text-container h1 {
-                font-size: 3rem;
+                font-size: 2.5rem;
             }
             .motto {
-                font-size: 1rem;
+                font-size: 0.875rem;
             }
             .sub-banner {
                 padding: 1rem 0;
@@ -190,21 +192,24 @@
                 min-width: 12rem;
             }
             .search-bar {
-                width: 100px;
-                font-size: 0.8rem;
+                width: 150px;
+                font-size: 0.9rem;
             }
             .search-bar:focus {
-                width: 150px;
+                width: 200px;
             }
             .search-button {
-                padding: 0.25rem 0.6rem;
-                font-size: 0.8rem;
+                padding: 0.5rem 1.2rem;
+                font-size: 0.9rem;
             }
             section {
-                padding: 3rem 0;
+                padding: 2.5rem 0;
             }
             section h2 {
-                font-size: 2rem;
+                font-size: 2.25rem;
+            }
+            section p {
+                font-size: 1rem;
             }
             .footer {
                 padding: 2rem 0;
@@ -213,14 +218,9 @@
                 font-size: 1rem;
             }
         }
-        @media (min-width: 768px) {
-            .logo {
-                width: 120px;
-            }
-        }
         @media (min-width: 1200px) {
             .logo {
-                width: 150px;
+                width: 100px;
             }
         }
         @media (max-width: 767px) {
@@ -234,37 +234,80 @@
             }
             .search-bar,
             .search-button {
-                margin: 0 auto;
+                margin: 0.5rem 0;
+            }
+            .nav-menu {
+                display: none;
+            }
+            .nav-menu.active {
+                display: flex;
+                flex-direction: column;
+                background-color: var(--primary-color);
+                padding: 1rem;
+                position: absolute;
+                top: 100%;
+                left: 0;
+                width: 100%;
+                z-index: 20;
             }
             .dropdown-menu {
                 position: static;
                 width: 100%;
-                z-index: 1;
+                background-color: var(--primary-color);
+                box-shadow: none;
+            }
+            .dropdown-menu a {
+                padding: 0.5rem 1rem;
+                color: var(--tertiary-color);
+            }
+            .dropdown.active .dropdown-menu {
+                display: block;
+            }
+        }
+        @media (min-width: 480px) and (max-width: 767px) {
+            .subjects-grid {
+                grid-template-columns: repeat(2, 1fr);
+            }
+            .subject-bubble {
+                max-width: 160px;
             }
         }
         :focus {
             outline: 2px solid var(--accent-color);
             outline-offset: 2px;
         }
-        /* Subject Bubbles */
+        .subjects-grid-wrapper {
+            display: flex;
+            justify-content: center;
+        }
+        .subjects-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+            gap: 1rem;
+            width: 100%;
+            max-width: 1200px;
+        }
         .subject-bubble {
-            width: 200px;
-            height: 200px;
+            width: 100%;
+            aspect-ratio: 1/1;
+            min-width: 120px;
+            max-width: 180px;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
             text-align: center;
-            padding: 1rem;
+            padding: 0.75rem;
             background-color: var(--primary-color);
+            border-radius: 50%;
         }
         .subject-bubble i {
             font-size: 1.5rem;
             color: var(--tertiary-color);
-            margin-bottom: 0.5rem;
+            margin-bottom: 0.25rem;
         }
         .subject-bubble h3 {
-            font-size: 1rem;
+            font-size: 0.9rem;
             line-height: 1.2;
             color: var(--tertiary-color);
         }
@@ -272,16 +315,25 @@
             transform: scale(1.05);
             transition: transform 0.3s ease;
         }
-        /* Centering the Grid */
-        .subjects-grid-wrapper {
-            display: flex;
-            justify-content: center;
+        @media (max-width: 767px) {
+            .subjects-grid {
+                grid-template-columns: 1fr;
+                gap: 0.75rem;
+            }
+            .subject-bubble {
+                max-width: 200px;
+                margin: 0 auto;
+            }
         }
-        .subjects-grid {
-            display: grid;
-            grid-template-columns: repeat(3, minmax(200px, 1fr));
-            gap: 1.5rem;
-            width: fit-content;
+        .sr-only {
+            position: absolute;
+            width: 1px;
+            height: 1px;
+            padding: 0;
+            margin: -1px;
+            overflow: hidden;
+            clip: rect(0, 0, 0, 0);
+            border: 0;
         }
     </style>
 </head>
@@ -289,14 +341,15 @@
     <header class="banner">
         <div class="container mx-auto flex flex-col md:flex-row items-center justify-between px-4">
             <div class="flex flex-col items-center md:flex-row">
-                <img src="Heading.jpg?v=2" alt="Philo Classical Academy Banner" class="logo">
+                <img src="Heading.jpg?v=2" alt="Philo Classical Academy Banner" class="logo" loading="lazy">
                 <div class="text-container">
                     <h1 class="text-4xl md:text-5xl accent-text">Philo Classical Academy</h1>
                     <p class="motto mt-2">Virtute ad Veritatem</p>
                 </div>
             </div>
             <div class="flex items-center space-x-2">
-                <input type="text" class="search-bar" placeholder="Search..." aria-label="Search">
+                <label for="search" class="sr-only">Search</label>
+                <input type="text" id="search" class="search-bar" placeholder="Search...">
                 <button class="search-button">Search</button>
             </div>
         </div>
@@ -304,34 +357,39 @@
     <div class="divider"></div>
 
     <nav class="sub-banner">
-        <div class="container mx-auto flex flex-col md:flex-row justify-center items-center px-4 space-y-4 md:space-y-0 md:space-x-8">
-            <a href="index.html" class="nav-link">Home</a>
-            <div class="dropdown relative">
-                <a href="index.html#about" class="nav-link">About Us</a>
-                <div class="dropdown-menu hidden">
-                    <a href="mission-vision.html" class="block">Our Mission</a>
-                    <a href="history.html" class="block">History</a>
-                    <a href="faculty.html" class="block">Faculty/Staff</a>
+        <div class="container mx-auto flex flex-col md:flex-row justify-between items-center px-4 space-y-4 md:space-y-0 md:space-x-8">
+            <button class="md:hidden hamburger focus:outline-none" aria-label="Toggle navigation" aria-expanded="false">
+                <i class="fas fa-bars text-xl text-white"></i>
+            </button>
+            <div class="nav-menu hidden md:flex flex-col md:flex-row items-center space-y-4 md:space-y-0 md:space-x-8">
+                <a href="index.html" class="nav-link">Home</a>
+                <div class="dropdown relative">
+                    <a href="index.html#about" class="nav-link" aria-expanded="false">About Us</a>
+                    <div class="dropdown-menu hidden">
+                        <a href="mission-vision.html" class="block">Our Mission</a>
+                        <a href="history.html" class="block">History</a>
+                        <a href="faculty.html" class="block">Faculty/Staff</a>
+                    </div>
                 </div>
-            </div>
-            <div class="dropdown relative">
-                <a href="index.html#academics" class="nav-link">Academics</a>
-                <div class="dropdown-menu hidden">
-                    <a href="k5-program.html" class="block">K-5 Program</a>
-                    <a href="6-9-program.html" class="block">6-9 Program</a>
-                    <a href="10-12-program.html" class="block">10-12 Program</a>
+                <div class="dropdown relative">
+                    <a href="index.html#academics" class="nav-link" aria-expanded="false">Academics</a>
+                    <div class="dropdown-menu hidden">
+                        <a href="k5-program.html" class="block">K-5 Program</a>
+                        <a href="6-9-program.html" class="block">6-9 Program</a>
+                        <a href="10-12-program.html" class="block">10-12 Program</a>
+                    </div>
                 </div>
-            </div>
-            <div class="dropdown relative">
-                <a href="index.html#admissions" class="nav-link">Admissions</a>
-                <div class="dropdown-menu hidden">
-                    <a href="process.html" class="block">Process</a>
-                    <a href="tuition.html" class="block">Tuition</a>
-                    <a href="financial-aid.html" class="block">Financial Aid</a>
+                <div class="dropdown relative">
+                    <a href="index.html#admissions" class="nav-link" aria-expanded="false">Admissions</a>
+                    <div class="dropdown-menu hidden">
+                        <a href="process.html" class="block">Process</a>
+                        <a href="tuition.html" class="block">Tuition</a>
+                        <a href="financial-aid.html" class="block">Financial Aid</a>
+                    </div>
                 </div>
+                <a href="index.html#news" class="nav-link">News</a>
+                <a href="index.html#contact" class="nav-link">Contact</a>
             </div>
-            <a href="index.html#news" class="nav-link">News</a>
-            <a href="index.html#contact" class="nav-link">Contact</a>
         </div>
     </nav>
 
@@ -344,30 +402,30 @@
             <h3 class="text-2xl font-bold text-center mb-6">Core Subjects</h3>
             <div class="subjects-grid-wrapper">
                 <div class="subjects-grid">
-                    <div class="subject-bubble flex flex-col items-center p-6 rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300">
-                        <i class="fas fa-landmark mb-2"></i>
+                    <a href="history6-9.html" class="subject-bubble flex flex-col items-center p-6 rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300">
+                        <i class="fas fa-landmark mb-2" aria-hidden="true"></i>
                         <h3>History</h3>
-                    </div>
+                    </a>
                     <a href="math6-9.html" class="subject-bubble flex flex-col items-center p-6 rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300">
-                        <i class="fas fa-calculator mb-2"></i>
+                        <i class="fas fa-calculator mb-2" aria-hidden="true"></i>
                         <h3>Mathematics</h3>
                     </a>
                     <a href="science6-9.html" class="subject-bubble flex flex-col items-center p-6 rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300">
-                        <i class="fas fa-flask mb-2"></i>
+                        <i class="fas fa-flask mb-2" aria-hidden="true"></i>
                         <h3>Science</h3>
                     </a>
                     <a href="literature6-9.html" class="subject-bubble flex flex-col items-center p-6 rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300">
-                        <i class="fas fa-book mb-2"></i>
+                        <i class="fas fa-book mb-2" aria-hidden="true"></i>
                         <h3>Literature</h3>
                     </a>
-                    <div class="subject-bubble flex flex-col items-center p-6 rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300">
-                        <i class="fas fa-palette mb-2"></i>
+                    <a href="languages-fine-arts6-9.html" class="subject-bubble flex flex-col items-center p-6 rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300">
+                        <i class="fas fa-palette mb-2" aria-hidden="true"></i>
                         <h3>Languages and Fine Arts</h3>
-                    </div>
-                    <div class="subject-bubble flex flex-col items-center p-6 rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300">
-                        <i class="fas fa-users mb-2"></i>
+                    </a>
+                    <a href="humanities6-9.html" class="subject-bubble flex flex-col items-center p-6 rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300">
+                        <i class="fas fa-users mb-2" aria-hidden="true"></i>
                         <h3>Humanities</h3>
-                    </div>
+                    </a>
                 </div>
             </div>
         </section>
@@ -375,9 +433,34 @@
 
     <div class="footer-divider"></div>
     <footer class="footer">
-        <p>Philo Classical Academy | 612-405-4594 | info@philoacademy.org</p>
-        <p>Website: philoacademy.org</p>
+        <p><a href="tel:+16124054594">612-405-4594</a> | <a href="mailto:info@philoacademy.org">info@philoacademy.org</a></p>
+        <p>Website: <a href="https://philoacademy.org">philoacademy.org</a></p>
         <p>© 2025 Philo Classical Academy. All rights reserved.</p>
     </footer>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const hamburger = document.querySelector('.hamburger');
+            const navMenu = document.querySelector('.nav-menu');
+            const dropdowns = document.querySelectorAll('.dropdown');
+
+            hamburger.addEventListener('click', () => {
+                const isExpanded = navMenu.classList.toggle('active');
+                hamburger.setAttribute('aria-expanded', isExpanded);
+            });
+
+            dropdowns.forEach(dropdown => {
+                const link = dropdown.querySelector('.nav-link');
+                const dropdownMenu = dropdown.querySelector('.dropdown-menu');
+                link.addEventListener('click', (e) => {
+                    if (window.innerWidth < 768) {
+                        e.preventDefault();
+                        const isExpanded = dropdownMenu.classList.toggle('active');
+                        link.setAttribute('aria-expanded', isExpanded);
+                    }
+                });
+            });
+        });
+    </script>
 </body>
 </html>
