--- a/mission.html
+++ b/mission.html
@@ -305,12 +305,13 @@
     <main>
         <section class="container mx-auto px-4">
             <h2 class="text-3xl md:text-4xl font-bold text-center mb-6">Mission and Vision</h2>
-
+            
             <h3 class="text-2xl font-bold mb-4">Philosophy of Education</h3>
-            <p class="mb-4">At Philo Classical Academy, we hold firm to the belief that modern education has lost its tradition of nobility. Schools have become fixated on fleeting trends, narrow worldviews, and purely pragmatic job training. Philo Classical Academy rejects this approach to education.</p>
-            <p class="mb-4">PCA is not a typical classical school. We champion the enduring legacy of the Western Tradition to inspire our students to excellence. We believe that a truly rigorous education—emphasizing academics, physical fitness, and virtue—is more essential now than ever. Every element of our curriculum is thoughtfully chosen for its capacity to foster an appreciation of beauty, goodness, and truth.</p>
+            <p class="mb-4">At Philo Classical Academy, we hold firm to the belief that modern education has lost its tradition of nobility. Schools have become fixated on fleeting trends, narrow worldviews, and purely pragmatic job training. Philo Classical Academy rejects this approach to education and centers instruction on Truth, Goodness, and Beauty.</p>
+            <p class="mb-4">PCA is not a typical classical school. We champion the enduring legacy of the Western Tradition to inspire our students to excellence. We believe that a truly rigorous education—emphasizing academics, physical fitness, and virtue—is more essential now than ever. Beauty holds a central role in our instruction and, as such, we vigorously defend the essential nature of the arts, music, and literature for a classical education. Every element of our curriculum is thoughtfully chosen for its capacity to foster an appreciation of beauty, goodness, and truth.</p>
             <p class="mb-4">At PCA, we reject a simplistic "Trivium" structure to education. Students are exposed to a logical, enriching, and traditional curriculum at every level. Unlike a typical Liberal Arts school, we do not elevate one subject over another; each is valued for its unique contribution to developing a high degree of intelligence and character. Our literature, history, and fine arts programs inspire students to seek beauty and virtue, while our language, science, and mathematics curricula develop an appreciation for the logical order. Together, these disciplines cultivate logic, communication, and wisdom.</p>
             <p class="mb-4">Philo Classical Academy is committed to restoring the classical aims of education to cultivate the best people with the best resources.</p>
+
 
             <h3 class="text-2xl font-bold mb-4">Mission</h3>
             <p class="mb-4">The mission of Philo Classical Academy is to provide a truly rigorous education in academics, virtue, and physical fitness that cultivates a deep love of the True, the Good, and the Beautiful in pursuit of the classical ideal of excellence.</p>
