--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <meta name="author" content="Philo Classical Academy">
     <title>Philo Classical Academy | Virtute ad Veritatem</title>
     <link rel="icon" type="image/png" href="favicon-32x32.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Roboto:wght@300;400;700&display=swap" as="style" onload="this.rel='stylesheet'">
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Playfair+Display:ital,wght@0,400;0,700;1,400&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         :root {
@@ -76,7 +78,7 @@
             top: 100%;
             left: 0;
             z-index: 20;
-            width: 100%;
+            width: max-content;
             min-width: 12rem;
         }
         .dropdown:hover .dropdown-menu,
@@ -312,6 +314,7 @@
             border-radius: 9999px;
             font-size: 1.25rem;
             cursor: pointer;
+            z-index: 50;
         }
         @media (min-width: 768px) {
             .banner { padding: 2rem 0; }
@@ -383,7 +386,7 @@
         }
     </style>
 </head>
-<body class="bg-gray-100">
+<body>
     <header class="banner">
         <div class="container flex flex-col md:flex-row items-center justify-between px-4">
             <div class="flex flex-col items-center md:flex-row">
@@ -395,7 +398,7 @@
             </div>
             <div class="flex items-center space-x-2">
                 <label for="search-input" class="sr-only">Search the site</label>
-                <input id="search-input" type="text" class="search-bar" placeholder="Search..." aria-label="Search">
+                <input id="search-input" type="search" class="search-bar" placeholder="Search..." aria-label="Search">
                 <button class="search-button">Search</button>
             </div>
         </div>
@@ -442,7 +445,7 @@
             <h2 class="accent-text">Help Bring Philo Classical Academy to Woodbury</h2>
             <p>Join us in our mission to establish a classical great books school in Woodbury, dedicated to truth, goodness, and beauty. Become part of our founding community today!</p>
             <div class="google-form-container">
-                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeOFtH6nEA3w-U9NxyNDgUT8A34WHvOXsl49z1nuvygUKXaqw/viewform?embedded=true" width="100%" height="400" frameborder="0" marginheight="0" marginwidth="0" loading="lazy">Loading…</iframe>
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeOFtH6nEA3w-U9NxyNDgUT8A34WHvOXsl49z1nuvygUKXaqw/viewform?embedded=true" title="Join Us Form" loading="lazy">Loading…</iframe>
             </div>
         </div>
     </div>
@@ -509,19 +512,19 @@
         <section id="slideshow" class="slideshow-section">
             <div class="slideshow-container">
                 <div class="slide active">
-                    <img src="https://picsum.photos/800/400?random=1" alt="" loading="lazy">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/9/94/Sanzio_01.jpg" alt="The School of Athens by Raphael, depicting ancient Greek philosophers" loading="lazy">
                 </div>
                 <div class="slide">
-                    <img src="https://picsum.photos/800/400?random=2" alt="" loading="lazy">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/a/ae/Aristotle_Altemps_Inv8575.jpg" alt="Bust of Aristotle, ancient Greek philosopher" loading="lazy">
                 </div>
                 <div class="slide">
-                    <img src="https://picsum.photos/800/400?random=3" alt="" loading="lazy">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/8/88/Plato_Silanion_Musei_Capitolini_MC1377.jpg" alt="Bust of Plato, founder of the Academy" loading="lazy">
                 </div>
                 <div class="slide">
-                    <img src="https://picsum.photos/800/400?random=4" alt="" loading="lazy">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/c/c6/Thales_of_Miletus.jpg" alt="Engraving of Thales of Miletus, pre-Socratic philosopher" loading="lazy">
                 </div>
                 <div class="slide">
-                    <img src="https://picsum.photos/800/400?random=5" alt="" loading="lazy">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/5/5d/Jean-L%C3%A9on_G%C3%A9r%C3%B4me_-_Diogenes_-_Walters_37131.jpg" alt="Painting of Diogenes the Cynic by Jean-Léon Gérôme" loading="lazy">
                 </div>
             </div>
             <div class="dots-container">
@@ -612,7 +615,7 @@
 
         // Basic Search Functionality
         document.querySelector('.search-button').addEventListener('click', () => {
-            const query = document.querySelector('.search-bar').value;
+            const query = document.querySelector('.search-bar').value.trim();
             if (query) {
                 window.location.href = `https://www.google.com/search?q=site:philoacademy.org+${encodeURIComponent(query)}`;
             }
